# cheap-rag

./: .env.example  .gitignore  CLAUDE.md  EXTRACTORS_IMPLEMENTATION.md  EXTRACTOR_SUMMARY.md  IMPLEMENTATION_STATUS.md  ODOO_INTEGRATION.md  PAGILA_INTEGRATION.md  README.md  SETUP.md  SOURCE_CODE.md  WEEK1_COMPLETE.md  WEEK2_PROGRESS.md  extract_odoo_metadata.py  generate_embeddings.py  noxfile.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_odoo_connection.py  test_pagila_connection.py
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: ci.yaml  claude.yaml  hybrid.yaml  local.yaml
config/ab_variants/: bge_large.yaml  bge_small.yaml  e5_large.yaml  gte_large.yaml  mpnet_baseline.yaml
config/ab_variants/attic/: instructor_xl.yaml
data/: .gitkeep  artifacts.csv  artifacts.ods
data/ab_testing/results/: embedding_model_comparison_2026_report.json  embedding_model_comparison_2026_report.md  embedding_model_comparison_2026_results.json
data/evaluation/: evaluation_report.json  evaluation_report.md
doc/: SETUP.md
scripts/: BENCHMARKING.md  README.md  add_type_ignores.py  benchmark_performance.py  browse_chroma.py  build_gold_dataset.py  chromadb_python314_fix.py  demo_extractors.py  demo_java_extraction.py  demo_sqlite_extraction.py  download_models.py  export_artifacts_csv.py  fix_test_artifacts.py  index_metadata.py  query_example.py  run_ab_test.py  run_evaluation.py  sanity_check_gold_dataset.py
scripts/pagila/: extract_pagila_metadata.py  generate_embeddings.py
src/: __init__.py  config.py
src/ab_testing/: __init__.py  experiment.py  variant.py
src/api/: routes.py
src/embeddings/: __init__.py  service.py
src/evaluation/: __init__.py  gold_dataset.py  metrics.py  reporting.py
src/extractors/: __init__.py  base.py  database_extractor.py  java_extractor.py  java_extractor_jar.py  postgres_extractor.py  python_extractor.py  sqlite_extractor.py  typescript_extractor.py
src/generation/: __init__.py  citations.py  generator.py  prompts.py  response.py
src/indexing/: __init__.py  pipeline.py  schema.py
src/observability/: README.md  __init__.py  error_tracking.py  logging.py  performance.py  tracing.py
src/retrieval/: __init__.py  filters.py  semantic_search.py
src/vectorstore/: __init__.py  chroma_store.py  faiss_store.py
tests/: __init__.py
tests/fixtures/: gold_dataset.json  gold_dataset_review.json  test_queries.json
tests/test_ab_testing/: test_experiment.py  test_variant.py
tests/test_api/: test_routes.py
tests/test_evaluation/: test_gold_dataset.py  test_metrics.py  test_reporting.py
tests/test_extractors/: conftest.py  test_base.py  test_postgres_extractor.py  test_python_extractor.py  test_typescript_extractor.py
tests/test_generation/: __init__.py  test_citations.py  test_generator.py  test_prompts.py  test_response.py
tests/test_observability/: test_error_tracking.py  test_logging.py  test_performance.py  test_tracing.py
tests/test_retrieval/: test_quality.py
tests/test_scripts/: test_run_evaluation.py
