[project]
name = "cheap-rag"
version = "0.1.0"
description = "CHEAP Metadata RAG System - Phase 1: Core RAG + Embeddings + Vector Search"
authors = [
    {name = "CHEAP Project"}
]
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "chromadb>=0.4.18",
    "anthropic>=0.39.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.1",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.3",
    "tqdm>=4.66.1",
    "loguru>=0.7.2",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "javalang>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "ipython>=8.17.2",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
